# Week-3-assessment

backend/: Cargo.toml
backend/src/: config.rs  handlers.rs  main.rs  models.rs  utils.rs
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
